# oneqrew-orchestrator

./: .env.example  .gitignore  Procfile  README.md  conftest.py  pyproject.toml  railpack.json  railway.json
docs/: architecture.md
knowledge/: team_skill_map.json
knowledge/brand_guides/: index.json
knowledge/business_units/: BAUFAKTURA.md  BLUESOLUTION_SMARTHANDWERK.md  BLUESOLUTION_SMARTZEIT.md  CP-PRO.md  DIGI.md  EXTRAGROUP.md  INFLEET.md  MSOFT.md  PINNCALC.md  QOMET.md  QUOTES.md  SYKASOFT.md  TAIFUN.md  baugewerbe.md  dach_und_holz.md  shk_e.md
knowledge/context/: examples.md
knowledge/employees/: andre_koehler.json  christina_helms.json  employees.md  finja_witt.json  ines_mueller.json  janosch_niemeyer.json  laura_piccolomo.json  lina_weiss.json  madelin_grohmann.json  maren_hoyer.json  matteo_diehl.json  philipp_ehring.json  sandra_hoppe.json  sara_niklassik.json  susanne_arasin.json
knowledge/policies/: assignment.md  completeness.md  routing.md
scripts/: register_asana_webhook.py  run_local_orchestrator.py
src/marketing_agent_engine/: main.py
src/marketing_agent_engine/config/: llm.py  settings.py
src/marketing_agent_engine/crews/analysis_crew/: crew.py  domain_tools.py
src/marketing_agent_engine/crews/analysis_crew/config/: agents.yaml  tasks.yaml
src/marketing_agent_engine/domain/: __init__.py  assignment_rules.py  business_units.py  clusters.py  completeness_rules.py  employees.py  routing_rules.py  schemas.py  skill_matching.py  task_categorization.py
src/marketing_agent_engine/flows/: __init__.py  task_orchestrator_flow.py
src/marketing_agent_engine/mcp/: __init__.py  client.py  guarded_client.py  tools.py
src/marketing_agent_engine/presenters/: __init__.py  asana_comment.py  json_output.py
src/marketing_agent_engine/runtime/: __init__.py  orchestrator_runner.py
src/marketing_agent_engine/webhook/: server.py
src/oneqrew/: crew.py  main.py
tests/: test_domain.py  test_dry_run.py  test_end_to_end.py  test_flow.py  test_presenters.py  test_skill_matrix.py
